[package]
name = "hnb-exchange"
version = "0.1.0"
authors = ["Vedran Pugar <iokrono.com@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde_json = {version = "1.0"}
serde = {version = "1.0", features = ["std", "derive"]}
chrono = "0.4"
clap = "2"
termion = "*"
